<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListWeek">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/MondayTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_monday" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/TuesdayTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_tuesday" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/WednesdayTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_wednesday" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ThursdayTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_thursday" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/FridayTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_friday" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/SaturdayTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_saturday" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/SundayTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_sunday" />
        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>


